refactoring, using real currency and docs changes
