# swagger.yaml
@@ -3,13 +3,14 @@ consumes:
 - application/json
 definitions:
   GenericError:
-    description: GenericError is a generic error message returned by a server
+    description: GenericError GenericError is a generic error message returned by a server
     properties:
       message:
+        description: message
         type: string
         x-go-name: Message
     type: object
-    x-go-package: coffe-api/handlers
+    x-go-package: coffe-api/sdk/models
   Product:
     description: Product defines the structure for an API product
     properties:
@@ -31,7 +32,7 @@ definitions:
         x-go-name: Name
       price:
         description: the price for the product
-        format: float
+        format: double
         minimum: 0.01
         type: number
         x-go-name: Price
@@ -47,15 +48,16 @@ definitions:
     type: object
     x-go-package: coffe-api/data
   ValidationError:
-    description: ValidationError is a collection of validation error messages
+    description: ValidationError ValidationError is a collection of validation error messages
     properties:
       messages:
+        description: messages
         items:
           type: string
         type: array
         x-go-name: Messages
     type: object
-    x-go-package: coffe-api/handlers
+    x-go-package: coffe-api/sdk/models
 info:
   description: Documentation for Product API
   title: of Product API
@@ -65,6 +67,13 @@ paths:
     get:
       description: Return a list of products from the database
       operationId: listProducts
+      parameters:
+      - description: |-
+          Currency used when returning the price of the product,
+          when not specified currency is returned in GBP.
+        in: query
+        name: Currency
+        type: string
       responses:
         "200":
           $ref: '#/responses/productsResponse'
@@ -136,14 +145,6 @@ paths:
     get:
       description: Return a list of products from the database
       operationId: listSingle
-      parameters:
-      - description: The id of the product for which the operation relates
-        format: int64
-        in: path
-        name: id
-        required: true
-        type: integer
-        x-go-name: ID
       responses:
         "200":
           $ref: '#/responses/productResponse'
